tests/integration/first_class_functions/first_class_function_return_error2.june
// error: found: fun (i64) -> i64 expected: fun (c_string) -> c_string

fun bar() -> fun(c_string) -> c_string {
    return foo
}

fun foo(x: i64) -> i64 {
    return x + 10
}

println(bar()(c"bob"))